# wheeled-biped

./: .env  .gitignore  install_deps.bash  requirements.txt
assets/: plane_world.xml  robot.xml
assets/calibration/: imu.json
assets/stl/: Back Battery Cap.stl  Back.stl  Battery.stl  Lower Leg.stl  Mounting Plate.stl  Servo Leg Housing Assembly.stl  Shell.stl  Upper Leg Asembly.stl
data/bag_real_imu/: bag_real_imu_0.mcap  metadata.yaml
data/bag_real_wheel_acc_0/: metadata.yaml  rosbag2_2025_08_16-21_54_11_0.mcap
data/bag_real_wheel_acc_20/: metadata.yaml  rosbag2_2025_08_16-21_59_40_0.mcap
data/bag_real_wheel_acc_38/: metadata.yaml  rosbag2_2025_08_16-21_57_41_0.mcap
data/bag_sim_imu/: bag_sim_imu_0.mcap  metadata.yaml
data/bag_sim_wheel/: bag_sim_wheel_0.mcap  metadata.yaml
mjcf/stl/: Leg Link Assembly.stl  Mounting Plate.stl
mujoco_bridge/: package.xml  setup.cfg  setup.py
mujoco_bridge/mujoco_bridge/: mujoco_bridge_node.py
ros_ws/: sim.repos
ros_ws/launch/: sim.launch.py
ros_ws/src/real/: CMakeLists.txt  mjcf  package.xml
ros_ws/src/real/config/: wobl.yaml
ros_ws/src/real/include/real/: imu.h
ros_ws/src/real/launch/: wobl.launch.py
ros_ws/src/real/scripts/: convert_mjcf_to_urdf.py
ros_ws/src/real/src/: imu.cpp  imu_live_calib.cpp  imu_node.cpp  main.cpp  servo_driver.cpp
ros_ws/src/real/urdf/: converted_L_foot.stl  converted_L_link.stl  converted_L_shin.stl  converted_L_shin_servo.stl  converted_R_hip_servo.stl  converted_R_link.stl  converted_R_shin_servo.stl  converted_back_cap.stl  converted_battery.stl  converted_mounting_plate.stl  converted_robotL_hip.stl  converted_robotL_shin.stl  converted_robotL_shin_servo.stl  converted_robotR_foot.stl  converted_robotR_hip.stl  converted_robotR_shin.stl  converted_robotR_shin_servo.stl  converted_robotR_thigh.stl  converted_robotback.stl  converted_robotback_cap.stl  converted_shell.stl  robot.urdf  ros2_control.urdf.xacro
ros_ws/src/sim/: package.xml  setup.cfg  setup.py
ros_ws/src/sim/sim/: mujoco_bridge.py
wb/sim/: application.py  balance_task.py  robot.py
wb/vis/: sim_pid_control.py
wobl/control/: pid_balancer.py
wobl/sim/: application.py  balance_task.py  robot.py
wobl/vis/: sim_pid_control.py
wobl_bringup/: CMakeLists.txt  package.xml
wobl_bringup/config/: wobl.yaml
wobl_bringup/launch/: imu.launch.py  real.launch.py  real_debug.launch.py  real_hardware.launch.py  sim.launch.py  sim2.launch.py  wobl.launch.py
wobl_control/: CMakeLists.txt  package.xml
wobl_control/config/: params.yaml
wobl_control/include/wobl_control/: config.hpp  diff_drive_kinematics.hpp  kalman_filter.hpp  linear_filter.hpp  lqr_controller.hpp  parameter_handler.hpp  pid_balance_controller.hpp  wobl_command.hpp  wobl_config.hpp  wobl_state.hpp
wobl_control/scripts/: lqr_gains.py
wobl_control/src/: lqr_controller.cpp  parameter_handler.cpp  pid_balance_controller.cpp  pid_balance_controller_node.cpp  wheel_eval_node.cpp  wobl_command.cpp  wobl_controller_node.cpp  wobl_state.cpp
wobl_controllers/: CMakeLists.txt  package.xml  plugin.xml
wobl_controllers/include/wobl_controllers/: pid_balance_controller.hpp
wobl_controllers/src/: pid_balance_controller.cpp  pid_balance_controller_node.cpp
wobl_description/: CMakeLists.txt  package.xml
wobl_description/mjcf/: robot.xml
wobl_description/mjcf/stl/: Back Battery Cap.stl  Back.stl  Shell.stl
wobl_description/urdf/: converted_L_hip.stl  converted_L_hip_servo.stl  converted_L_thigh.stl  converted_R_foot.stl  converted_R_hip.stl  converted_R_shin.stl  converted_R_thigh.stl  converted_back.stl  converted_robotL_foot.stl  converted_robotL_hip_servo.stl  converted_robotL_link.stl  converted_robotL_thigh.stl  converted_robotR_hip_servo.stl  converted_robotR_link.stl  converted_robotbattery.stl  converted_robotmounting_plate.stl  converted_robotshell.stl  ros2_control.urdf.xacro
wobl_gui/: package.xml  setup.cfg  setup.py
wobl_gui/launch/: joy_teleop.launch.py  sim_joy_teleop.launch.py  tune_lqr_gains.launch.py  tune_pid_gains.launch.py
wobl_gui/wobl_gui/: joy2cmd.py  joy_brdge_wsl.py  joy_bridge_win.py  tune_gains_node.py  tune_lqr.py
wobl_hardware/: CMakeLists.txt  package.xml
wobl_hardware/include/wobl_hardware/: servo_driver.hpp
wobl_hardware/src/: imu.cpp  imu_live_calib.cpp  imu_node.cpp  servo_driver.cpp  servo_node.cpp
wobl_hardware/tools/: imu_live_calib.cpp  robot_test.cpp  servo_driver_test.cpp  servo_ping.cpp  servo_set_id.cpp  servo_set_midpoint.cpp
wobl_messages/: CMakeLists.txt  package.xml
wobl_messages/msg/: JointDiagnostics.msg
wobl_msgs/: CMakeLists.txt  package.xml
wobl_msgs/msg/: ControllerInputs.msg  JointCommand.msg  Topics.msg
wobl_real/: CMakeLists.txt  package.xml
wobl_real/include/wobl_real/: imu.h  servo_driver.hpp
wobl_real/launch/: bringup.launch.py  eval_wheels.launch.py  imu.launch.py  real_debug.launch.py  record_imu.launch.py
wobl_real/src/: imu.cpp  imu_node.cpp  servo_driver.cpp  servo_node.cpp
wobl_real/tools/: imu_live_calib.cpp  robot_test.cpp  servo_driver_test.cpp  servo_ping.cpp  servo_set_id.cpp  servo_set_midpoint.cpp
wobl_sim/: package.xml  setup.cfg  setup.py
wobl_sim/launch/: bringup.launch.py  eval_wheels.launch.py  record_imu.launch.py
wobl_sim/mjcf/: convert.py  fusion_to_mujoco.py  robot.xml
wobl_sim/scripts/: compute_com.py  lqr_gains.ipynb  lqr_gains_analytic.ipynb  plot_imu.py  plot_velocity.py  plot_wheel_responses.py  test_lqr.py
wobl_sim/wobl_sim/: application.py  balance_task.py  mujoco_bridge_node.py  robot.py
